[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.25.0",
    "aiofiles==23.2.1",
    "altair==4.2.2",
    "bitsandbytes==0.43.0",
    "dadaptation==3.1",
    "diffusers[torch]==0.25.0",
    "easygui==0.98.3",
    "einops==0.7.0",
    "fairscale==0.4.13",
    "ftfy==6.1.1",
    "gradio==4.43.0",
    "huggingface-hub==0.20.1",
    "imagesize==1.4.1",
    "invisible-watermark==0.2.0",
    "library",
    "lion-pytorch==0.0.6",
    "lycoris-lora==2.2.0.post3",
    "omegaconf==2.3.0",
    "onnx==1.16.1",
    "onnxruntime-gpu==1.17.1",
    "open-clip-torch==2.20.0",
    "opencv-python==4.7.0.68",
    "prodigyopt==1.0",
    "protobuf==3.20.3",
    "pytorch-lightning==1.9.0",
    "rich>=13.7.1",
    "safetensors==0.4.2",
    "scipy==1.11.4",
    "tensorboard>=2.18.0",
    "tensorflow>=2.18.0",
    "timm==0.6.12",
    "tk==0.1.0",
    "toml==0.10.2",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers==4.38.0",
    "voluptuous==0.13.1",
    "wandb==0.15.11",
    "xformers==0.0.23.post1",
]

[tool.uv.sources]
library = { path = "sd-scripts" }
